fixed z-index so that it always overlaps other elements

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -37,7 +37,7 @@ $textColor: rgb(255,215,0);
         display: inline-block;
         margin: 0;
         padding-left: 0;
-        z-index: 1;
+        z-index: 1000;
     }
 
     li {
